fix bugs module-1

--- a/01-basics/03-MarkedList/index.html
+++ b/01-basics/03-MarkedList/index.html
@@ -21,9 +21,9 @@
         </div>
         <ul>
           <li
-            v-for="(mail, index) of getEmails"
+            v-for="(mail, index) of emailsList"
             :key="index"
-            :class="mail.isFiltered ? 'marked' : ''"
+            :class="{ 'marked': mail.isFiltered }"
           >
             {{ mail.name }}
           </li> 
